--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div class="row">
         <div class="col-md-12" id="pipeline"></div>
     </div>
+    <div class="row" id="bubbleHeading">
+        <p>Assigned Name and Reads </p>
+    </div>
     <div class="row">
         <div class="col-md-8" id="taxChart"></div>
         <div class="col-md-3" id="table"></div>
